# PeerChat

./: .gitignore  LICENSE  README.md  build.gradle  defaultmodels.md  detekt.yml  gradle.properties  on.plan.md  settings.gradle
.github/workflows/: ci.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/peerchat/app/: MainActivity.kt  PeerChatApp.kt
app/src/main/java/com/peerchat/app/data/: PeerChatRepository.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/peerchat/app/: IntegrationTest.kt  PeerChatRepositoryIntegrationTest.kt  PerformanceBenchmarkTest.kt
config/spotless/: copyright.kt
data/: build.gradle  consumer-rules.pro
data/schemas/com.peerchat.data.db.PeerDatabase/: 6.json
data/src/main/: AndroidManifest.xml
docs/: architecture.md  build.gradle  howto-models.md  rag-pipeline.md  testing-plan.md
engine/: build.gradle  consumer-rules.pro  proguard-rules.pro
engine/src/main/cpp/: CMakeLists.txt  peer_engine_jni.cpp
engine/src/main/cpp/llama/tools/server/webui/: package-lock.json  package.json
engine/src/main/java/com/peerchat/engine/: EngineBridge.kt  EngineMetrics.kt  EngineNative.kt  EngineRuntime.kt  TokenCallback.kt
gradle/: libs.versions.toml
rag/: build.gradle  consumer-rules.pro  proguard-rules.pro
rag/src/main/java/com/peerchat/rag/: Rag.kt  Retriever.kt
templates/: build.gradle  consumer-rules.pro  proguard-rules.pro
templates/src/main/java/com/peerchat/templates/: ChatTemplate.kt  TemplateImplementations.kt
(+105 files in other folders)
